--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,26 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   min-width: 400px;
   max-width: 600px;
-  background-color: #1f2937;
+  background-color: #fdfdfd;
 }
 
 .control-container {
-  background-color: #273549;
+  background-color: #ebe4e4;
   padding: 10px;
   margin: 0;
   margin-bottom: 10px;
-  border-radius: 6px;
+  border-radius: 15px;
+  box-shadow: inset 0 0 10px grey;
 }
 
 input {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  background-color: rgb(239, 238, 238);
-  border-radius: 6px;
+  background-color: rgb(255, 254, 254);
+  border-radius: 15px;
   border: 3px solid #10b981;
+  box-shadow: 0 0 10px grey;
 }
 input:hover {
   transition: 0.3s;
@@ -30,12 +32,14 @@ input:hover {
 }
 
 #between-el {
-  opacity: 20%;
+  opacity: 50%;
+  box-shadow: inset 0 0 10px grey;
 }
 #separate-el {
   margin: 20px auto;
   width: 80%;
-  opacity: 20%;
+  opacity: 50%;
+  box-shadow: inset 0 0 10px grey;
 }
 
 .btn-container {
@@ -52,7 +56,7 @@ button {
   margin-top: 4px;
   padding: 10px 20px;
   border: 1px solid #10b981;
-  border-radius: 4px;
+  border-radius: 45px;
 
   font-weight: 700;
   letter-spacing: 1px;
@@ -61,34 +65,40 @@ button {
   color: white;
 
   cursor: pointer;
+
+  box-shadow: 0px 2px 15px grey;
+
+  transition: all 0.3s ease 0s;
 }
 #input-btn:hover {
-  transition: 0.3s;
-  opacity: 80%;
+  background-color: #2ee59d;
+  box-shadow: 0px 15px 20px rgba(3, 250, 151, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
 #delete-btn {
-  background-color: rgb(239, 238, 238);
+  background-color: rgb(255, 255, 255);
   color: #10b981;
 }
 
 #delete-btn:hover {
-  transition: 0.3s;
-  background-color: red;
-  color: white;
-  opacity: 65%;
-  border: none;
+  background-color: #fc3d3d;
+  box-shadow: 0px 15px 20px rgb(255, 75, 75);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
 /* List */
 .itens-container {
-  background-color: #273549;
+  background-color: #ebe4e4;
   padding: 10px;
   padding-left: 20px;
   padding-bottom: 10px;
   margin: 0;
-  border-radius: 6px;
+  border-radius: 15px;
   margin-bottom: 10px;
+  box-shadow: inset 0 0 10px grey;
 }
 
 ul {
@@ -102,6 +112,8 @@ li {
 }
 
 li a {
+  word-wrap: break-word;
+  align-items: center;
   color: #10b981;
   font-size: 17px;
 }
@@ -112,9 +124,10 @@ li a {
 }
 
 li a:hover {
+  font-weight: 200;
   padding: 0 2px 4px 4px;
   transition: 0.3s;
-  background-color: #1f2937;
+  color: blue;
   border-radius: 6px;
 }
 
