--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 .control-container {
+  display: flexbox;
   background-color: #ebe4e4;
   padding: 10px;
   margin: 0;
@@ -18,7 +19,7 @@ body {
 }
 
 input {
-  width: 100%;
+  width: 83%;
   padding: 10px;
   box-sizing: border-box;
   background-color: rgb(255, 254, 254);
@@ -26,9 +27,41 @@ input {
   border: 3px solid #10b981;
   box-shadow: 0 0 10px grey;
 }
+
 input:hover {
   transition: 0.3s;
+  opacity: 80%;
+}
+
+input:focus {
+  outline: none;
+  background-color: #dffbdf;
+  font-weight: 600;
+}
+
+#btn-input {
+  padding: 5px;
+  display: inline;
+  width: auto;
+  font-size: 14px;
+}
+
+#btn-input:hover {
+  cursor: pointer;
+  transition: 0.3s;
   opacity: 90%;
+  background-color: #2ee59d;
+  color: white;
+  transform: translateY(-7px);
+  box-shadow: 0px 15px 20px rgba(3, 250, 151, 0.4);
+}
+
+#error {
+  margin: 5px 0 0 10px;
+}
+
+.errorInput {
+  border-color: #fc3d3d;
 }
 
 #between-el {
@@ -78,8 +111,8 @@ button {
 }
 
 #delete-btn {
-  background-color: rgb(255, 255, 255);
-  color: #10b981;
+  background-color: rgb(168, 4, 4);
+  color: #fff;
 }
 
 #delete-btn:hover {
@@ -118,9 +151,22 @@ li a {
   font-size: 17px;
 }
 
+.close-btn {
+  padding: 3px 2.5px 1.5px 3px; /*top right down left*/
+  margin-right: 10px;
+}
+
+.close-btn:hover {
+  background-color: #fc3d3d;
+  color: #ebe4e4;
+  border-color: #fc3d3d;
+}
+
 .disabled {
   pointer-events: none;
   opacity: 0.65;
+  box-shadow: inset 0 0 10px rgb(3, 3, 3);
+  border: none;
 }
 
 li a:hover {
